# MONITORING_WITH_PROMETHEUS_EXAMPLE

./: README.md  docker-compose.yml  prometheus.yaml
grafana-data/: dashboard.json
python-application/: Dockerfile  pyproject.toml
python-application/src/: server.py
