[tool.poetry]
name = "python-application"
version = "0.1.0"
description = ""
authors = ["stanislav <stanislav.matveew@yandex.ru>"]
readme = "README.md"
packages = [{include = "python_application"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
prometheus-client = "^0.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
